// Copyright 2019 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package arquebus.model;

option go_package = "model";

// AssignerStatus represents the status of an Assigner.
enum AssignerStatus {
  // INVALID is to catch an Assigner status that was not initialized
  // unintentionally.
  INVALID = 0;
  // RUNNING means that the assigner is running normally.
  RUNNING = 1;

  // DRAINED means that the assigner has been drained and no more tasks will
  // be scheduled and run.
  DRAINED = 2;
  // REMOVED means that the assigner config has been removed.
  //
  // If the config of an Assigner is removed, the entity will be removed,
  // by a cron job, with all the Task entities after all of the scheduled
  // tasks are cancelled and running tasks are completed.
  REMOVED = 3;
}
